# succinct-col-compress

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cleanup.sh  cleanup_exernal.sh  col_compress.sh  ext_cleanup.sh
cmake/: ApacheExternal.cmake  DSLibExternal.cmake  FST.cmake  FindSuccinct.cmake  LZ4External.cmake  LibMortonExternal.cmake  SuRF.cmake  SuccinctExternal.cmake
scripts/: compress.sh  split.sh
src/: CMakeLists.txt  CompressCols.cpp  LZ4Compress.cpp  README.md  Task1.cpp  col_compress.cpp  compress.sh  compress_cols.cpp  lz4_compress.cpp  split.cpp  split.sh  splitter  splitter.cpp  succinct_compress.cpp
src/include/: CompressCols.h  LZ4Compress.h  MKRdxPat.hpp  compress_cols.h  delta_encoded_array_backup.h  succinct_compress.h
tests/: test
